Add CORS configuration, refactor ShoutcastService to use RestTemplate, and create HELP.md